Fix menu alignment

--- a/src/assets/scss/boldgrid/navigation/_base.scss
+++ b/src/assets/scss/boldgrid/navigation/_base.scss
@@ -140,6 +140,24 @@
 			.sm-clean li {
 				float: left;
 			}
+
+			// Left aligned menus need to line up with everything else.
+			.sm-clean.w,
+			.sm-clean.nw,
+			.sm-clean.sw {
+				li:first-of-type a {
+					padding-left: 0px;
+				}
+			}
+
+			// Right aligned menus need to line up with everything else.
+			.sm-clean.e,
+			.sm-clean.ne,
+			.sm-clean.se {
+				li:last-of-type a {
+					padding-right: 0px;
+				}
+			}
 			.sm-clean.sm-rtl li {
 				float: right;
 			}
